--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,32 +4,32 @@ jack_mason:
     email: jack.mason@kn-i.com
     twitter: http://twitter.com/mrsideshowjack
     web: https://sideshowjack.uk
-    avatar: http://blog.consentua.com/public/authors/jack_mason.jpg
+    avatar: https://consentua.com/blog/public/authors/jack_mason.jpg
     description: Front end developer of Consentua.
 tom_ashcroft:
     name: Tom Ashcroft
     email: tom.ashcroft@kn-i.com
     web: http://kn-i.com
-    avatar: http://blog.consentua.com/public/authors/tom_ashcroft.jpg
+    avatar: https://consentua.com/blog/public/authors/tom_ashcroft.jpg
     description: Lead developer of Consentua.
-# richard_gomer:
-#     name: Richard Gomer
-#     email: richard@xebre.net
-#     twitter: https://twitter.com/richardgomer
-#     web: http://www.blog.richardgomer.eu/
-#     avatar: http://blog.consentua.com/public/authors/richard_gomer.jpg
-#     description: Human-Computer Interaction Researcher and Consultant with a particular interest in Privacy, Consent & Data Protection.
+richard_gomer:
+    name: Richard Gomer
+    email: richard@xebre.net
+    twitter: https://twitter.com/richardgomer
+    web: http://www.blog.richardgomer.eu/
+    avatar: https://consentua.com/blog/public/authors/richard_gomer.jpg
+    description: Human-Computer Interaction Researcher and Consultant with a particular interest in Privacy, Consent & Data Protection.
 david_patto:
     name: David Patterson
     email: david.patterson@kn-i.com
     twitter: http://twitter.com/David_Patto
     web: http://kn-i.com
-    avatar: http://blog.consentua.com/public/authors/david_patto.jpg
+    avatar: https://consentua.com/blog/public/authors/david_patto.jpg
     description: Founder of Consentua - the GDPR compliant personal data consent tool. Also founder of KnowNow Information and part owner of Portsmouth Football Club.
 chris_cooper:
     name: Chris Cooper
     email: chris.cooper@kn-i.com
     twitter: http://twitter.com/MobilityCooper
     web: http://kn-i.com
-    avatar: http://blog.consentua.com/public/authors/chris_cooper.jpg
+    avatar: https://consentua.com/blog/public/authors/chris_cooper.jpg
     description: Co-creator of Consentua our new GDPR consent service. Principal of KnowNowCities SmartCities experts. Chief innovator & co-founder of KnowNow Information.
