--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,9 @@
 # Author details.
+george_barbeary:
+    name: George Barbeary
+    email: george.barbeary@kn-i.com
+    web: http://kn-i.com
+    description: Marketing expert for Consentua
 jack_mason:
     name: Jack Mason
     email: jack.mason@kn-i.com
