--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -30,7 +30,7 @@ david_patto:
     twitter: http://twitter.com/David_Patto
     web: http://kn-i.com
     avatar: https://consentua.com/blog/public/authors/david_patto.jpg
-    description: Founder of Consentua - the GDPR compliant personal data consent tool. Also founder of KnowNow Information and part owner of Portsmouth Football Club.
+    description: Founder of Consentua and parent company KnowNow Information. Creator of twin boys. 
 chris_cooper:
     name: Chris Cooper
     email: chris.cooper@kn-i.com
